Edge:
* Can indicate whether Sphinx should use a socket for connections instead of TCP (Simon Hürlimann).
* Can have just attribute values returned as search results using `:attributes_only => true` in a search call (Andrew Hunter).
* Can specify additional local indices for the generated distributed index (usually one per model) (Andrew Hunter).
* Supporting Sphinx 2.0.4 (Ilia Lobsanov).
* Load MySQL SSL settings from database.yml (James Brooks).
* Adding Sphinx 2.0.3 support (identical to 2.1.0).
* Dropping Rails 1.2 and 2.0.x support.
* Association keys now are the association stacks as arrays - more reliable in Rubinius.
* Can now determine PostgreSQL versions with JRuby.
* Many testing tweaks.
* Allow for rank_expr option being passed through to Riddle.

2.0.11 - January 2nd 2011
* Call #all on search results to force population of results, matching ActiveRecord::Relation#all in essence. (Adrian Macneil).
* 1.4.11 changes.

2.0.10 - November 4th 2011
* 1.4.10 changes.

2.0.9 - October 10th 2011
* 1.4.9 changes (fixed invalid gemspec).

2.0.8 - October 10th 2011
* Actually looking at Rails engines paths for models (Eduardo Casanova).
* Ensuring associations for acts-as-taggable-on are tweaked for Rails 3.1 (Anthony).
* Bug fix for association collection proxies in Rails 3.1 (Pavel Forkert).
* References all known Rails model paths - better for Rails 3 Engines.
* Don't reload I18n anymore - the load order isn't an issue in Rails 3 or 3.1.
* Fixing attribute source queries for Rails 3.1.
* 1.4.8 changes

2.0.7 - August 29th 2011
* Making sure lib directory is actually a part of the gem. Oops.

2.0.6 - August 28th 2011
* Don't change superclass index definitions (otherwise sibling subclasses can end up with each others' index definitions).
* Improved scope support (Andrew White).
* Fixed association-filtered searches for Rails 3.1 (Andrew White).
* Fixed polymorphic association support for Rails 3.1 (Jonathan Viney).
* 1.4.7 changes.

2.0.5 - May 25th 2011