@@ -24,7 +24,7 @@ module ThinkingSphinx
         extend ThinkingSphinx::ActiveRecord::ClassMethods
 
         class << self
-          attr_accessor :sphinx_index_blocks
+          attr_accessor :sphinx_index_blocks, :sphinx_types
 
           def set_sphinx_primary_key(attribute)
             @sphinx_primary_key_attribute = attribute
@@ -54,6 +54,10 @@ module ThinkingSphinx
 
           def sphinx_index_options
             sphinx_indexes.last.options
+          end
+
+          def set_sphinx_types(types)
+            @sphinx_types = types
           end
 
           # Generate a unique CRC value for the model's name, to use to
